syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.restate.sdk.testing.testservices";
option java_outer_classname = "TestGreeterProto";

import "dev/restate/ext.proto";

package greeter;

service TestGreeter {
  option (dev.restate.ext.service_type) = KEYED;

  rpc Greet (TestGreetingRequest) returns (TestGreetingResponse);

  rpc GreetCount (TestGreetingRequest) returns (TestGreetingResponse);

  rpc GetSetClearState (TestGreetingRequest) returns (TestGreetingResponse);

  rpc CallOtherService (TestGreetingRequest) returns (TestGreetingResponse);

  rpc FailingGreet (TestGreetingRequest) returns (TestGreetingResponse);

  rpc UseSideEffect (TestGreetingRequest) returns (TestGreetingResponse);

  rpc AwakeableTest (TestGreetingRequest) returns (TestGreetingResponse);
}

message TestGreetingRequest {
  string name = 1 [(dev.restate.ext.field) = KEY];
}

message TestGreetingResponse {
  string message = 1;
}
